Release Note

* 10/20/2014
  * fixed JG for startEvent

* 10/15/2014
  * improved AtlasProdTR to set destination from dst:

* 10/5/2014
  * fixed AtlasProdJobBroker for pre-assigned high prio tasks  

* 10/3/2014
  * fixed JG to propagate middle-name to merged files 

* 9/26/2014
  * improved getTasksToBeFinished_JEDI to avoid row lock contention
  * changed AtlasAnalPostProcessor to skip freezing trn
  * fixed infinite output/log dataset making

* 9/25/2014
  * setting minRamCount and maxCpuCount to pmerge jobs

* 9/24/2014
  * improved AtlasAnalysisPP for multiple threads processing the same task
  * increased timeout of Interaction to 600

* 9/23/2014
  * changed for prod tasks to avalanche when 5 scout jobs succeeded 
  * introduced scoutSuccessRate
  * fixed AtlasProdJobBroker for noInput
  * capped maxDiskCount until maxwdir is used everywhere
  * added capability to reset resource requirements
  * added split rule for merge step

* 9/22/2014
  * removed the hint from getOutputFiles_JEDI
  * added protection for non exiting cliParams to AtlasAnalPP

* 9/16/2014
  * added umNameAtEnd

* 9/12/2014
  * cleanup for reqID
  * added a hint to getOutputFiles_JEDI
  * reduced fetch size in getOutputFiles_JEDI

* 9/11/2014
  * added protection to getScoutData against widely distributed input sizes
  * fixed AtlasAnalJobBroker to take effective input size into account for walltime

* 9/10/2014
  * fixed undefined variables in JediDBProxy
  * added addNthFieldToLFN

* 9/8/2014
  * fixed file lookup for container
  * introduced trn_unknown
  * added protection against changed comm_parameter

* 9/7/2014
  * removing duplicated panda.um

* 9/3/2014
  * changed AtlasDDM to use listDatasets2
  * changed TR to set proper status/error when registration is failed

* 9/2/2014
  * changed AtlasDDM to work with dq2 and rucio
  * updating startTime at submitssion or retry
  * changed pending killer to take startTime into account

* 8/29/2014
  * fixed getAnalSitesWithData